@@ -1,3 +1,7 @@
+2012-07-07 Borut Razem <borut.razem AT siol.net>
+
+	* index.php, previous.php: added News - sdcc 3.2.0 RC4
+
 2012-06-29 Borut Razem <borut.razem AT siol.net>
 
 	* index.php, previous.php: added News - sdcc 3.2.0 RC3
